move graphs to hbs

--- a/assets/templates/menu.hbs
+++ b/assets/templates/menu.hbs
@@ -1,6 +1,6 @@
 <ul class="menu ms-Fabric">
     <img class="logo" src="assets/threshold-logo.jpg" alt="Threshold logo">
     <li><button onclick="showPage('Home')">Home</a></li>
-    <li><button onclick="showPage('costOvertime')">Homelessness Cost overtime</a></li>
-    <li><button onclick="showPage('costRental')">Rental Cost & Homelessness</a></li>
+    <li><button onclick="showPage('rentalCost')">Rental Cost → Homelessness</a></li>
+    <li><button onclick="showPage('rentOverIncome')">Rent vs income</a></li>
 </ul>
