--- a/assets/templates/menu.hbs
+++ b/assets/templates/menu.hbs
@@ -1,6 +1,6 @@
 <ul class="menu ms-Fabric">
     <img class="logo" src="assets/threshold-logo.jpg" alt="Threshold logo">
-    <li><button onclick="showPage('Home')">The Real Cost of Homelessness</a></li>
-    <li><button onclick="showPage('rentalCost')">Rental Cost → Homelessness</a></li>
-    <li><button onclick="showPage('rentOverIncome')">Rent vs income</a></li>
+    <li><button onclick="Handlebars.showPage(PAGE_HOME)">The Real Cost of Homelessness</a></li>
+    <li><button onclick="Handlebars.showPage(PAGE_RENTAL_COST)">Rental Cost → Homelessness</a></li>
+    <li><button onclick="Handlebars.showPage(PAGE_RENT_OVER_INCOME)">Rent vs income</a></li>
 </ul>
