--- a/assets/styles.css
+++ b/assets/styles.css
@@ -27,22 +27,48 @@ body {
     align-self: center;
 }
 
-.menu a {
-    color: inherit; 
+.menu button {
+    background: none;
+	color: inherit;
+	border: none;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+    color: inherit;
+    background-color: #ffffff; 
+    border: none;
     text-decoration: inherit;
     padding: 1em 1em 0.9em 1em;
     margin-bottom: 0.2em;
 }
 
-.menu a:hover {
+.menu button:hover {
     background-color: #e7e7e7;
+    border: none;
+}
+
+.menu button:active {
+    border: none;
+}
+
+i {
+    margin-top: 5em;
+}
+
+i:hover {
+    font-weight: bolder;
 }
 
 #content {
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: baseline;
+}
+
+#page {
+    display: flex;
     align-self: center;
-    flex-grow: 1;
     flex-direction: column;
 }
 
@@ -70,4 +96,8 @@ a.hoverTooltip:hover span {
     top: 10px;
     text-decoration: none;
     white-space: pre-line;
+}
+
+a:not(:last-of-type):after {
+    content: ',';
 }
