--- a/assets/templates/home.hbs
+++ b/assets/templates/home.hbs
@@ -1,5 +1,5 @@
 <h1>The cost of Homelessness in Ireland</h1>
-<div>
+<div id="headline">
     <p>The <span class="em">cost</span> of Homelessness in Ireland during <select name="year" id="year-select"
             onchange="yearSelected(this)">
             {{#each yearSelectData}}
@@ -7,21 +7,19 @@
             {{/each}}
         </select> is/was <span class="em" id="data-cost">{{money currentSelect.total}}</span></p>
 </div>
-<div>
-    <p>This cost is composed of
-    <p>
+<div id="midline">
+    <p>That cost is composed of
         <span id="data-direct-cost">{{money currentSelect.direct.total}}</span> of <a href=""
             class="hoverTooltip">direct
-            cost<span id="data-direct-cost-breakdown">{{money currentSelect.direct.HAP}} in Housing assistance
-                {{money currentSelect.direct.RAS}} in RAS cost
-                {{money currentSelect.direct.charities}} for the charitable sector
+            costs<span id="data-direct-cost-breakdown">{{money currentSelect.direct.HAP}} in Housing Assistance Payments,
+                {{money currentSelect.direct.RAS}} in RAS spending,
+                {{money currentSelect.direct.charities}} for the charitable sector.
             </span></a>, and</p>
-    <p>
         <span id="data-indirect-cost">{{money currentSelect.indirect.total}}</span> of
         <a href="" class="hoverTooltip">indirect cost
-            <span id="data-indirect-cost-breakdown">{{money currentSelect.indirect.lost_tax_revenue}} in lost tax revenue from employment
-                {{money currentSelect.indirect.medical_spend}} in additional medical costs
-                {{money currentSelect.indirect.justice_spend}} in additional costs to the justice system
+            <span id="data-indirect-cost-breakdown">{{money currentSelect.indirect.lost_tax_revenue}} in lost tax revenue from employment,
+                {{money currentSelect.indirect.medical_spend}} in additional medical costs,
+                {{money currentSelect.indirect.justice_spend}} in additional costs to the justice system.
             </span></a>.</p>
     </p>
 </div>
