--- a/assets/templates/home.hbs
+++ b/assets/templates/home.hbs
@@ -16,7 +16,7 @@
                 {{money currentSelect.direct.charities}} for the charitable sector.
             </span></a>, and</p>
         <span id="data-indirect-cost">{{money currentSelect.indirect.total}}</span> of
-        <a href="" class="hoverTooltip">indirect cost
+        <a href="" class="hoverTooltip">indirect costs
             <span id="data-indirect-cost-breakdown">{{money currentSelect.indirect.lost_tax_revenue}} in lost tax revenue from employment,
                 {{money currentSelect.indirect.medical_spend}} in additional medical costs,
                 {{money currentSelect.indirect.justice_spend}} in additional costs to the justice system.
