--- a/assets/templates/home.hbs
+++ b/assets/templates/home.hbs
@@ -5,7 +5,8 @@
             {{#each yearSelectData}}
                 <option autocomplete="off" value="{{year}}" {{#if selected}} selected="{{selected}}" {{/if}} >{{year}} </option>
             {{/each}}
-        </select> is/was <span class="em" id="data-cost">{{money currentSelect.total}}</span></p>
+        </select> is/was <span class="em" id="data-cost">{{money currentSelect.total}}</span></p>.
+        <p>That is enough money to build approximately {{houses currentSelect.total}} houses.</p>
 </div>
 <div id="midline">
     <p>That cost is composed of
