--- a/assets/templates/home.hbs
+++ b/assets/templates/home.hbs
@@ -1,7 +1,7 @@
-<h1>The cost of Homelessness in Ireland</h1>
+<h1>The Cost of Homelessness in Ireland</h1>
 <div id="headline">
     <h3 class="highlight">
-    <p>The <span class="em">cost</span> of Homelessness in Ireland during <select name="year" id="year-select"
+    <p>The <span class="em">cost</span> of homelessness in Ireland during <select name="year" id="year-select"
             onchange="yearSelected(this)">
             {{#each yearSelectData}}
                 <option autocomplete="off" value="{{year}}" {{#if selected}} selected="{{selected}}" {{/if}} >{{year}} </option>
