--- a/assets/styles.css
+++ b/assets/styles.css
@@ -96,6 +96,10 @@ i:hover {
     padding: 20px;
 }
 
+#year-select {
+    font-size: 20px;
+}
+
 a.hoverTooltip {
     border-bottom: 1px dashed;
     text-decoration: none
